plugins {
    id 'java'
    id 'maven-publish'
    id 'application'
    // plugin to generate fat jar with all required java libraries
    id 'org.springframework.boot' version '2.5.5'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    // plugin to provide which dependencies have updates
    // adds dependencyUpdates task
    id 'com.github.ben-manes.versions' version '0.39.0'
}

sourceCompatibility = '11'

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

def versions = [
        ScalaBinary: "2.13"
]

dependencies {
    // Akka Actors
    implementation platform("com.typesafe.akka:akka-bom_${versions.ScalaBinary}:2.6.16")
    implementation "com.typesafe.akka:akka-actor-typed_${versions.ScalaBinary}"
    implementation 'info.picocli:picocli:4.6.1'
    implementation 'com.google.code.gson:gson:2.8.8'
    implementation 'com.maxmind.geoip2:geoip2:2.15.0'
    implementation 'org.springframework.boot:spring-boot-starter-parent:2.5.5'
    // No specific versioning and let Spring Boot Starter do it
    // https://stackoverflow.com/a/65731572
    implementation ('org.springframework.boot:spring-boot-starter-web'){
        exclude group: 'ch.qos.logback', module: 'logback-classic'
        exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
    }
    // Add springboot annotations
    implementation 'org.springframework.boot:spring-boot-configuration-processor'
    implementation 'org.apache.logging.log4j:log4j-core:2.14.1'
    // slf4j-simple and slf4j-api used to remove "Failed to load class "org.slf4j.impl.StaticLoggerBinder"" warning
    implementation 'org.slf4j:slf4j-simple:2.0.0-alpha5'
    implementation 'org.slf4j:slf4j-api:2.0.0-alpha5'
    testImplementation 'junit:junit:4.13.2'
    // Akka Actor
    testImplementation "com.typesafe.akka:akka-actor-testkit-typed_${versions.ScalaBinary}"
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
}

application {
    // Define the main class for the application.
    mainClass = 'com.ziloka.ProxyBroker.ProxyBroker'
//    version = "1.0.0-SNAPSHOT"
}

bootJar {
    archiveBaseName = 'ProxyBroker'
}

jar {
    archiveBaseName = 'ProxyBroker'
}
